--- a/WolvenKit/App.xaml
+++ b/WolvenKit/App.xaml
@@ -54,7 +54,7 @@
                     </DataTemplate>
                     <DataTemplate DataType="{x:Type docvm:ScriptDocumentViewModel}">
                         <Grid>
-                            <documents:TweakDocumentView />
+                            <documents:ScriptDocumentView />
                         </Grid>
                     </DataTemplate>
 
